fix: Implement global rule for freeing home hexes